--- a/Views/SuccessStoryView.xaml
+++ b/Views/SuccessStoryView.xaml
@@ -7,7 +7,8 @@
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
              xmlns:commonpluginsshared="clr-namespace:CommonPluginsShared"
              xmlns:livechartscommon="clr-namespace:CommonPluginsControls.LiveChartsCommon"
-             mc:Ignorable="d" Height="740" Width="1280" Background="{DynamicResource WindowBackgourndBrush}">
+             mc:Ignorable="d" d:DesignHeight="740" d:DesignWidth="1280" 
+             Background="{DynamicResource WindowBackgourndBrush}">
 
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -25,17 +26,19 @@
 
         <Grid Name="PART_Data">
             <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="687" />
-            <ColumnDefinition Width="8" />
-            <ColumnDefinition Width="*" />
-        </Grid.ColumnDefinitions>
+                <ColumnDefinition Width="700" />
+                <ColumnDefinition Width="10" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
             <!-- Filter options -->
-            <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" BorderThickness="{DynamicResource PopupBorderThickness}" BorderBrush="{DynamicResource NormalBorderBrush}" Margin="0,0,0,10">
+            <Border Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="0" 
+                    BorderThickness="{DynamicResource PopupBorderThickness}" BorderBrush="{DynamicResource NormalBorderBrush}" 
+                    Margin="0,0,0,10">
                 <Grid Margin="10">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
@@ -63,17 +66,25 @@
                     </ComboBox>
 
                     <StackPanel HorizontalAlignment="Right" Grid.Column="7" Orientation="Horizontal">
-                        <TextBlock Style="{DynamicResource BaseTextBlockStyle}" Text="{DynamicResource LOCCommonTotalFound}" VerticalAlignment="Center" />
-                        <TextBlock Style="{DynamicResource BaseTextBlockStyle}" Name="PART_TotalFoundCount" VerticalAlignment="Center"
-                                   Text="1000" Width="40" TextAlignment="Right" /> 
+                        <TextBlock Style="{DynamicResource BaseTextBlockStyle}" Text="{DynamicResource LOCCommonTotalFound}" 
+                                   VerticalAlignment="Center" />
+                        <TextBlock Style="{DynamicResource BaseTextBlockStyle}" Name="PART_TotalFoundCount" 
+                                   VerticalAlignment="Center"
+                                   Text="1000" Width="40" TextAlignment="Right" />
                     </StackPanel>
                 </Grid>
             </Border>
 
             <!-- List games with achievements -->
-            <DockPanel Grid.Column="0" Grid.Row="1">
+            <Grid Grid.Column="0" Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="auto" />
+                </Grid.RowDefinitions>
+                
                 <!-- Global progression -->
-                <Grid DockPanel.Dock="Bottom" Height="70" Margin="0,10,0,0">
+                <Grid Height="70" Margin="0,10,0,0" Grid.Row="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="auto" />
                         <ColumnDefinition Width="*" />
@@ -100,13 +111,13 @@
                     </Grid>
                 </Grid>
 
-                <Grid DockPanel.Dock="Bottom">
+                <Grid Grid.Row="1">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*" />
                         <ColumnDefinition Width="10" />
                         <ColumnDefinition Width="*" />
                     </Grid.ColumnDefinitions>
-                
+
                     <!-- Graphic all achievements by sources -->
                     <DockPanel Grid.Column="0" Name="PART_GraphicBySource">
                         <StackPanel DockPanel.Dock="Top">
@@ -116,28 +127,29 @@
                         <StackPanel Name="SuccessStory_Achievements_Graphics_Sources" DockPanel.Dock="Bottom" Height="168" MaxHeight="168">
                             <lvc:CartesianChart Name="StatsGraphicAchievementsSources" Height="168" LegendLocation="Bottom" FontFamily="{DynamicResource CommonFont}">
                                 <lvc:CartesianChart.ChartLegend>
-                                    <lvc:DefaultLegend Height="5" Width="0" />
+                                    <lvc:DefaultLegend Height="2" Visibility="Hidden" />
                                 </lvc:CartesianChart.ChartLegend>
-                                
+
                                 <lvc:CartesianChart.DataTooltip>
                                     <livechartscommon:CustomerToolTipForSingle />
                                 </lvc:CartesianChart.DataTooltip>
-                            
+
                                 <lvc:CartesianChart.AxisX>
-                                    <lvc:Axis Name="StatsGraphicAchievementsSourcesX" MinValue="0" ShowLabels="True" FontFamily="{DynamicResource CommonFont}" FontSize="16">
+                                    <lvc:Axis Name="StatsGraphicAchievementsSourcesX" ShowLabels="True" FontFamily="{DynamicResource CommonFont}" FontSize="16">
                                         <lvc:Axis.Separator>
                                             <lvc:Separator Step="1" />
                                         </lvc:Axis.Separator>
                                     </lvc:Axis>
                                 </lvc:CartesianChart.AxisX>
+                                
                                 <lvc:CartesianChart.AxisY>
-                                    <lvc:Axis Name="StatsGraphicAchievementsSourcesY" ShowLabels="False">
+                                    <lvc:Axis Name="StatsGraphicAchievementsSourcesY" ShowLabels="True">
                                     </lvc:Axis>
                                 </lvc:CartesianChart.AxisY>
                             </lvc:CartesianChart>
                         </StackPanel>
                     </DockPanel>
-                
+
                     <!-- Graphic all unlocked achievements -->
                     <DockPanel Grid.Column="2" Name="PART_GraphicAllUnlocked">
                         <StackPanel DockPanel.Dock="Top">
@@ -145,12 +157,34 @@
                         </StackPanel>
 
                         <StackPanel Name="SuccessStory_Achievements_Graphics" DockPanel.Dock="Bottom" Height="168">
+                            <lvc:CartesianChart Name="AchievementsMonth" Height="168" LegendLocation="Bottom" FontFamily="{DynamicResource CommonFont}">
+                                <lvc:CartesianChart.ChartLegend>
+                                    <lvc:DefaultLegend Height="2" Visibility="Hidden" />
+                                </lvc:CartesianChart.ChartLegend>
+
+                                <lvc:CartesianChart.DataTooltip>
+                                    <livechartscommon:CustomerToolTipForSingle />
+                                </lvc:CartesianChart.DataTooltip>
+
+                                <lvc:CartesianChart.AxisX>
+                                    <lvc:Axis Name="AchievementsMonthX" ShowLabels="True" FontFamily="{DynamicResource CommonFont}">
+                                        <lvc:Axis.Separator>
+                                            <lvc:Separator Step="1" />
+                                        </lvc:Axis.Separator>
+                                    </lvc:Axis>
+                                </lvc:CartesianChart.AxisX>
+                                
+                                <lvc:CartesianChart.AxisY>
+                                    <lvc:Axis Name="AchievementsMonthY" ShowLabels="True">
+                                    </lvc:Axis>
+                                </lvc:CartesianChart.AxisY>
+                            </lvc:CartesianChart>
                         </StackPanel>
                     </DockPanel>
                 </Grid>
 
                 <!-- List games -->
-                <StackPanel Margin="0,0,0,10" Name="lvGamesStackPanel">
+                <StackPanel Margin="0,0,0,10" Name="lvGamesStackPanel" Grid.Row="0">
                     <ListView Name="ListviewGames" Height="{Binding ElementName=lvGamesStackPanel, Path=ActualHeight}" 
                               SelectionChanged="ListviewGames_SelectionChanged" FontSize="24" GridViewColumnHeader.Click="ListviewGames_onHeaderClick">
                         <ListView.View>
@@ -189,7 +223,7 @@
                                     <GridViewColumn.CellTemplate>
                                         <DataTemplate>
                                             <Label Content="{Binding SourceIcon}" FontFamily="{DynamicResource CommonFont}" 
-                                                   HorizontalAlignment="Center" VerticalAlignment="Stretch" FontSize="24" />
+                                                   HorizontalAlignment="Center" VerticalAlignment="Stretch" FontSize="30" />
                                         </DataTemplate>
                                     </GridViewColumn.CellTemplate>
                                 </GridViewColumn>
@@ -212,26 +246,29 @@
                         </ListView.View>
                     </ListView>
                 </StackPanel>
-            </DockPanel>
+            </Grid>
 
             <!--Details achievements-->
-            <DockPanel Grid.Column="3" Grid.Row="1">
-                <DockPanel  DockPanel.Dock="Top" Margin="0,0,0,0">
+            <Grid Grid.Column="3" Grid.Row="1">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="auto" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                
+                <DockPanel Grid.Row="0">
                     <StackPanel DockPanel.Dock="Top">
                         <Label Name="GraphicTitle" Content="{DynamicResource LOCSuccessStoryGraphicTitle}" FontSize="16" HorizontalAlignment="Center" Margin="0,0,0,10" />
                     </StackPanel>
 
-                    <StackPanel x:Name="SuccessStory_Achievements_Graphics_Game" DockPanel.Dock="Bottom" Height="168">
-                    </StackPanel>
+                    <StackPanel x:Name="SuccessStory_Achievements_Graphics_Game" DockPanel.Dock="Bottom" Height="168" />
                 </DockPanel>
 
-                <Border DockPanel.Dock="Bottom" Margin="0,10,0,0" Name="listAchievementBorder"
-                        BorderBrush="{DynamicResource NormalBorderBrush}" BorderThickness="{DynamicResource ControlBorderThickness}">
-
-                    <StackPanel Name="SuccessStory_Achievements_List" Height="{Binding ElementName=listAchievementBorder, Path=ActualHeight}">
-                    </StackPanel>
+                <Border Margin="0,10,0,0" Name="listAchievementBorder" Grid.Row="1"
+                        BorderBrush="{DynamicResource NormalBorderBrush}" 
+                        BorderThickness="{DynamicResource ControlBorderThickness}">
+                    <Grid Name="SuccessStory_Achievements_List" />
                 </Border>
-            </DockPanel>
+            </Grid>
         </Grid>
     </Grid>
 </UserControl>
